--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-		<title>WEBGPU</title>
+		<link rel="stylesheet" href="/css/main.css" />
+		<title>Image Processing</title>
 	</head>
 	<body>
 		<div id="text-div">
 			<p id="msg"></p>
 		</div>
-		<div id="link-div">
-			<button>Start</button>
-			<a download="sample.png">Download</a>
+
+		<div id="cnv-div">
+			<canvas></canvas>
 		</div>
-		<div id="img-box"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
